Initial working offline journal browser

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,21 +14,25 @@ set(CMAKE_AUTORCC ON)
 set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
+find_package(PkgConfig REQUIRED)
+pkg_check_modules(SYSTEMD REQUIRED libsystemd)
+
 find_package(QT NAMES Qt6 Qt5 COMPONENTS Core Quick REQUIRED)
 find_package(Qt${QT_VERSION_MAJOR} COMPONENTS Core Quick REQUIRED)
 
 add_executable(journald-browser
     main.cpp
+    loggingcategories.cpp
     journaldhelper.cpp
+    journaldviewmodel.cpp
     qml.qrc
 )
 
-
 target_compile_definitions(journald-browser
-  PRIVATE $<$<OR:$<CONFIG:Debug>,$<CONFIG:RelWithDebInfo>>:QT_QML_DEBUG>)
+    PRIVATE $<$<OR:$<CONFIG:Debug>,$<CONFIG:RelWithDebInfo>>:QT_QML_DEBUG>)
 target_link_libraries(journald-browser
 PRIVATE
     Qt${QT_VERSION_MAJOR}::Core
     Qt${QT_VERSION_MAJOR}::Quick
-    systemd #TODO find systemd via pckg
+    ${SYSTEMD_LIBRARIES}
 )
