--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,10 @@
+# SPDX-License-Identifier: CC0-1.0
+# SPDX-FileCopyrightText: none
+#
 # This file is used to ignore files which are generated
 # ----------------------------------------------------------------------------
 TESTDATA/*
+CMakeLists.txt.user
 *~
 *.autosave
 *.a
