--- a/autotests/uniquequery/CMakeLists.txt
+++ b/autotests/uniquequery/CMakeLists.txt
@@ -1,3 +1,6 @@
+# SPDX-License-Identifier: BSD-3-Clause
+# SPDX-FileCopyrightText: Andreas Cord-Landwehr <cordlandwehr@kde.org>
+
 include_directories(
     ${CMAKE_SOURCE_DIR}/lib
     ${CMAKE_BINARY_DIR}/lib
