Initial support for export format from file
New systemdjournalremote class can be used to obtain data in form of
systemd's journal export format. The internal handling is done out of
process by systemd-journal-remote.

The initial support just provides reading a file completely and then
providing it via the IJournal abstraction.

--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -11,6 +11,7 @@ set(kjournald_SRCS
     journaldhelper.cpp
     journaldviewmodel.cpp
     journalduniquequerymodel.cpp
+    systemdjournalremote.cpp
 )
 
 set(kjournald_HDRS
@@ -20,6 +21,7 @@ set(kjournald_HDRS
     journaldhelper.h
     journaldviewmodel.h
     journalduniquequerymodel.h
+    systemdjournalremote.h
 )
 
 add_library(kjournald SHARED
