--- a/KJournaldConfig.cmake.in
+++ b/KJournaldConfig.cmake.in
@@ -1,3 +1,6 @@
+# SPDX-License-Identifier: BSD-3-Clause
+# SPDX-FileCopyrightText: Andreas Cord-Landwehr <cordlandwehr@kde.org>
+
 @PACKAGE_INIT@
 
 # Required components to use this library
