Provide CMake integration files

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,7 @@
 # SPDX-FileCopyrightText: Andreas Cord-Landwehr <cordlandwehr@kde.org>
 
 project(kjournald LANGUAGES CXX)
+set(KJOURNALD_VERSION 0.0.1)
 
 cmake_minimum_required(VERSION 3.10)
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
@@ -44,11 +45,20 @@ configure_package_config_file(
     "${CMAKE_CURRENT_BINARY_DIR}/KJournaldConfig.cmake"
     INSTALL_DESTINATION "${CMAKECONFIG_INSTALL_DIR}"
 )
+write_basic_package_version_file(
+    "${CMAKE_CURRENT_BINARY_DIR}/KJournaldConfigVersion.cmake"
+    VERSION ${KJOURNALD_VERSION}
+    COMPATIBILITY SameMinorVersion # API still changes a lot, better caution about compatibility; TODO set to MAJOR
+)
+
+install(
+    FILES
+        "${CMAKE_CURRENT_BINARY_DIR}/KJournaldConfig.cmake"
+        "${CMAKE_CURRENT_BINARY_DIR}/KJournaldConfigVersion.cmake"
+    DESTINATION "${CMAKECONFIG_INSTALL_DIR}")
 
 install(EXPORT KJournaldTargets
         DESTINATION "${CMAKECONFIG_INSTALL_DIR}"
-        FILE KJournaldTargets.cmake
-        NAMESPACE KF5::)
-
+        FILE KJournaldTargets.cmake)
 
 feature_summary(WHAT ALL FATAL_ON_MISSING_REQUIRED_PACKAGES)
