--- a/browser/org.kde.journald-browser.desktop
+++ b/browser/org.kde.journald-browser.desktop
@@ -2,6 +2,7 @@
 # SPDX-License-Identifier: CC0-1.0
 [Desktop Entry]
 Type=Application
+Exec=journald-browser %U
 Icon=utilities-log-viewer
 GenericName=Journald Browser
 GenericName[ca]=Navegador de Journald
