Make all ascii to QString casts explicit

--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -35,6 +35,7 @@ PRIVATE
     Qt5::Quick
     ${SYSTEMD_LIBRARIES}
 )
+set_property(TARGET kjournald APPEND PROPERTY COMPILE_DEFINITIONS QT_NO_CAST_FROM_ASCII QT_NO_CAST_TO_ASCII)
 target_include_directories(kjournald PUBLIC
       $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/>
       $<INSTALL_INTERFACE:${KDE_INSTALL_INCLUDEDIR}>
