--- a/autotests/CMakeLists.txt
+++ b/autotests/CMakeLists.txt
@@ -11,7 +11,9 @@ add_custom_target(extract_testdata
     WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
 )
 
+add_subdirectory(containertesthelper)
 add_subdirectory(localjournal)
 add_subdirectory(uniquequery)
 add_subdirectory(viewmodel)
 add_subdirectory(remotejournal)
+add_subdirectory(filtercriteriamodel)
