--- a/.kde-ci.yml
+++ b/.kde-ci.yml
@@ -5,4 +5,5 @@ Dependencies:
 - 'on': ['@all']
   'require':
     'frameworks/extra-cmake-modules': '@stable'
+    'frameworks/kcoreaddons': '@stable'
     'frameworks/ki18n': '@stable'
