--- a/browser/org.kde.kjournaldbrowser.desktop
+++ b/browser/org.kde.kjournaldbrowser.desktop
@@ -2,7 +2,7 @@
 # SPDX-License-Identifier: CC0-1.0
 [Desktop Entry]
 Type=Application
-Exec=kjournaldbrowser %U
+Exec=kjournaldbrowser %u
 Icon=utilities-log-viewer
 GenericName=Journald Browser
 GenericName[ca]=Navegador de «journald»
