Generate logging categories

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,6 +34,7 @@ include(ECMAddTests)
 include(ECMEnableSanitizers)
 include(ECMCoverageOption)
 include(ECMSetupVersion)
+include(ECMQtDeclareLoggingCategory)
 include(KDEInstallDirs)
 include(KDECMakeSettings)
 include(KDEClangFormat)
