.gitignore ignore file /compile_commands.json
File /compile_commands.json is created by kdesrc-build.
I vote that the content of the .gitignore file should be the
same as frameworks/kconfig/.gitignore.

--- a/.gitignore
+++ b/.gitignore
@@ -48,8 +48,8 @@ Thumbs.db
 # Vim temporary files
 .*.swp
 
-# use generated file
-.clang-format
+/.clang-format
+/compile_commands.json
 
 # Visual Studio generated files
 *.ib_pdb_index
