--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,8 +3,12 @@
 
 cmake_minimum_required(VERSION 3.16)
 
-project(kjournald LANGUAGES CXX)
-set(KJOURNALD_VERSION 0.1.90)
+set(RELEASE_SERVICE_VERSION_MAJOR "0")
+set(RELEASE_SERVICE_VERSION_MINOR "1")
+set(RELEASE_SERVICE_VERSION_MICRO "90")
+set(KJOURNALD_VERSION "${RELEASE_SERVICE_VERSION_MAJOR}.${RELEASE_SERVICE_VERSION_MINOR}.${RELEASE_SERVICE_VERSION_MICRO}")
+
+project(kjournald VERSION ${KJOURNALD_VERSION})
 
 set(CMAKE_AUTOUIC ON)
 set(CMAKE_CXX_STANDARD 17)
