Adapt build system for Qt6 only support

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,7 @@ set(RELEASE_SERVICE_VERSION_MAJOR "23")
 set(RELEASE_SERVICE_VERSION_MINOR "11")
 set(RELEASE_SERVICE_VERSION_MICRO "70")
 set(KJOURNALD_VERSION "${RELEASE_SERVICE_VERSION_MAJOR}.${RELEASE_SERVICE_VERSION_MINOR}.${RELEASE_SERVICE_VERSION_MICRO}")
+set(KJOURNALD_SOVERSION 0)
 
 project(kjournald VERSION ${KJOURNALD_VERSION})
 
@@ -25,7 +26,7 @@ add_definitions(
 )
 
 # KF minimal version is chosen to support Ubuntu 22.04 LTS
-set(KF_VERSION 5.80.0)
+set(KF_VERSION 5.239.0)
 find_package(ECM ${KF_VERSION} NO_MODULE)
 set_package_properties(ECM PROPERTIES
     TYPE REQUIRED
@@ -45,10 +46,10 @@ ecm_setup_version(${KJOURNALD_VERSION}
     VARIABLE_PREFIX KJOURNALD
     VERSION_HEADER "${CMAKE_CURRENT_BINARY_DIR}/kjournald_version.h"
     PACKAGE_VERSION_FILE "${CMAKE_CURRENT_BINARY_DIR}/KJournaldConfigVersion.cmake"
-    SOVERSION 0
+    SOVERSION ${KJOURNALD_SOVERSION}
 )
 
-find_package(KF${QT_MAJOR_VERSION} ${KF_VERSION} REQUIRED COMPONENTS
+find_package(KF6 ${KF_VERSION} REQUIRED COMPONENTS
     CoreAddons
     I18n
 )
@@ -57,8 +58,7 @@ add_definitions(-DTRANSLATION_DOMAIN=\"kjournald\")
 find_package(PkgConfig REQUIRED)
 pkg_check_modules(SYSTEMD REQUIRED IMPORTED_TARGET libsystemd)
 
-set(REQUIRED_QT_VERSION 5.15.0)
-find_package(Qt${QT_MAJOR_VERSION} ${REQUIRED_QT_VERSION} REQUIRED COMPONENTS
+find_package(Qt6 6.5.0 REQUIRED COMPONENTS
     Core
     Quick
     QuickControls2
