--- a/KJournaldConfig.cmake.in
+++ b/KJournaldConfig.cmake.in
@@ -5,7 +5,7 @@
 
 # Required components to use this library
 include(CMakeFindDependencyMacro)
-find_dependency(Qt@QT_MAJOR_VERSION@Core "@REQUIRED_QT_VERSION@")
+find_dependency(Qt6Core "@REQUIRED_QT_VERSION@")
 
 include("${CMAKE_CURRENT_LIST_DIR}/KJournaldTargets.cmake")
 
