--- a/.kde-ci.yml
+++ b/.kde-ci.yml
@@ -6,4 +6,5 @@ Dependencies:
   'require':
     'frameworks/extra-cmake-modules': '@latest-kf6'
     'frameworks/kcoreaddons': '@latest-kf6'
+    'frameworks/kcrash': '@latest-kf6'
     'frameworks/ki18n': '@latest-kf6'
