--- a/.kde-ci.yml
+++ b/.kde-ci.yml
@@ -8,3 +8,6 @@ Dependencies:
     'frameworks/kcoreaddons': '@latest-kf6'
     'frameworks/kcrash': '@latest-kf6'
     'frameworks/ki18n': '@latest-kf6'
+
+Options:
+ require-passing-tests-on: ['@all']
