Port QML files to new QML module structure

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,6 +11,9 @@ set(KJOURNALD_SOVERSION 0)
 
 project(kjournald VERSION ${KJOURNALD_VERSION})
 
+# generate QML LS integration
+set(QT_QML_GENERATE_QMLLS_INI ON)
+
 set(CMAKE_AUTOUIC ON)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
