--- a/org/kde/kjournaldbrowser/CMakeLists.txt
+++ b/org/kde/kjournaldbrowser/CMakeLists.txt
@@ -1,15 +1,17 @@
+# SPDX-License-Identifier: BSD-3-Clause
+# SPDX-FileCopyrightText: Andreas Cord-Landwehr <cordlandwehr@kde.org>
+
 add_library(kjournaldbrowser_backing STATIC)
 
 qt6_add_qml_module(
     kjournaldbrowser_backing
-    URI "org.kde.kjournaldbrowser"
+    URI org.kde.kjournaldbrowser
     IMPORTS
         org.kde.kirigami
+        org.kde.kjournald
     SOURCES
         clipboardproxy.cpp
         clipboardproxy.h
-        flattenedfiltercriteriaproxymodel.cpp
-        flattenedfiltercriteriaproxymodel.h
     QML_FILES
         Main.qml
         LogLine.qml
