Modernize KLocalizedContext setup

--- a/browser/CMakeLists.txt
+++ b/browser/CMakeLists.txt
@@ -23,6 +23,7 @@ LINK_PUBLIC
     Qt::QuickControls2
     Qt::Widgets # because of QApplication and QQC2 style integration
     KF6::I18n
+    KF6::I18nQml
     KF6::CoreAddons
     KF6::Crash
     kjournald
