--- a/.kde-ci.yml
+++ b/.kde-ci.yml
@@ -8,6 +8,8 @@ Dependencies:
     'frameworks/kcoreaddons': '@latest-kf6'
     'frameworks/kcrash': '@latest-kf6'
     'frameworks/ki18n': '@latest-kf6'
+    'frameworks/kirigami': '@latest-kf6'
+    'libraries/kirigami-addons': '@latest-kf6'
 
 Options:
  require-passing-tests-on: ['@all']
