--- a/.flatpak-manifest.json
+++ b/.flatpak-manifest.json
@@ -27,6 +27,22 @@
             ]
         },
         {
+            "name": "kirigami-addons",
+            "config-opts": [
+                "-DBUILD_TESTING=OFF",
+                "-DCMAKE_BUILD_TYPE=Release",
+                "-DBUILD_WITH_QT6=ON"
+            ],
+            "buildsystem": "cmake-ninja",
+            "sources": [
+                {
+                    "type": "git",
+                    "url": "https://invent.kde.org/libraries/kirigami-addons.git",
+                    "branch": "master"
+                }
+            ]
+        },
+        {
             "name": "kjournald",
             "buildsystem": "cmake-ninja",
             "sources": [
