Fix major set of linting issues in journaldviewmodel

--- a/org/kde/kjournaldbrowser/CMakeLists.txt
+++ b/org/kde/kjournaldbrowser/CMakeLists.txt
@@ -19,6 +19,8 @@ qt6_add_qml_module(
         clipboardproxy.h
         browserapplication.cpp
         browserapplication.h
+        formatter.cpp
+        formatter.h
     QML_FILES
         Main.qml
         LogLine.qml
